@@ -9,7 +9,7 @@
   <configure name="NAME" value="ImageMagick"/>
   <configure name="VERSION" value="6.7.5"/>
   <configure name="LIB_VERSION" value="0x675"/>
-  <configure name="LIB_VERSION_NUMBER" value="6,7,5,10"/>
+  <configure name="LIB_VERSION_NUMBER" value="6,7,5,9"/>
   <configure name="SVN_REVISION" value="7029" />
   <configure name="RELEASE_DATE" value="2012-03-04"/>
   <configure name="CONFIGURE" value="./configure "/>
